--- a/templates/students/add.html
+++ b/templates/students/add.html
@@ -16,7 +16,8 @@
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-default">Создать</button>
+            {# <button type="submit" class="btn btn-default">Создать</button> #}
+            <input type="submit" value="Create" />
         </form>
     </div>
 {% endblock content %}
