--- a/templates/students/edit.html
+++ b/templates/students/edit.html
@@ -23,7 +23,7 @@
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-default">Изменить</button>
+            <input type="submit" value="Edit" />
         </form>
 
        
