--- a/templates/students/remove.html
+++ b/templates/students/remove.html
@@ -24,7 +24,7 @@
         <h2>Студент {{ student.name }} {{ student.surname }} будет удален</h2>
         <form method="post">
             {% csrf_token %}
-            <button type="submit" class="btn btn-default">Удалить</button>
+            <input type="submit" value="Remove" />
         </form>
 
        
