--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -26,7 +26,7 @@
                 <h4>Квадратное уравнение a*x*x + b*x + c = 0</h4>
                 <form method="get">
                     {{ form.as_p }}
-                    <button type="submit" class="btn btn-default">Решить</button>
+                    <input type="submit" value="Решить" />
                 </form>
                 {% if discrim or discrim == 0 %}
                     <h4>Дискриминант: {{ discrim }}</h4> 
