--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,55 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    {% load staticfiles %}
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ITBursa list</title>
-    <style> 
-      body{background-image: url('../static/images/pic4.jpg') !important;
-      background-repeat: none; 
-      background-attachment: fixed;
-      background-size: 100%; 
-      background-position: center top}
-    </style>
+{% extends "base.html" %}
+{% load staticfiles %}
 
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
-  </head>
-  <body>
-    <!-- menu start -->   
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="{% url 'index' %}">ITBursa-2015</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- menu end --> 
+
+{% block title %}Students{% endblock title %}
+
+
+{% block nav_students %}class="active"{% endblock %}
+
+
+{% block content %}
     <div class="panel panel-default">
-
     <!-- Default panel contents -->
     <div class="panel-heading">Students of ITBursa-2015</div>
     <div class="panel-body">
       <p>This list provides extra references and information for students.</p>
-    
-    <div class="slash-div">
     <h2> Student's list: </h2>
     <br>
       <div class="table-responsive">
@@ -81,11 +45,6 @@
               {% endif %}  
             </tbody>
         </table>
-      </div>        
-    </div>
-    </div>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
-     
+      </div> 
+      </div>       
+{% endblock content %}   
