--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -10,27 +10,20 @@
   <body>
 
 <h1> Quadratic result </h1>
-<h4> Квадратное уравнение ax<sup>2</sup> + bx + c = 0</h4>
-a = {{ a }} <br>
-{{ a_error }} <br>
-b = {{ b }} <br>
-{{ b_error }} <br>
-c = {{ c }} <br>
-{{ c_error }} <br>
-
-
-{% if decision %}
-    {% if D > 0 %}
-        <p>Дискриминант: {{ D }}</p>
-        <p>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</p>
-    {% elif D == 0 %}
-        <p>Дискриминант: {{ D }} </p>
-        <p>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }} </p>
-    {% elif D < 0 %}
-        <p>Дискриминант: {{ D }} </p>
-        <p>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений. </p>
-    {% endif %}
-{% endif %}
+  <div class="container students">
+    <div class="page-header">
+      <h1 class="top1">Equation</h1>
+      <div class="jumbotron">
+        <h2>Квадратное уравнение a*x*x + b*x + c = 0</h2>
+        <form method="get">
+          {{ form.as_p }}
+          <input type="submit" value="Решить"/>
+        </form>
+        <p>{{ context.d }}</p>
+        <p>{{ context.result_message }}</p>
+      </div>
+    </div>
+  </div>
 
   </body>
 </html>
