--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -8,6 +8,18 @@
 
 
 {% block content %}
+     <br>
+        {% if messages %}
+        <div class="alert alert-success alert-dismissible" role="alert">
+            <ul class="messages">
+            {% for message in messages %}
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                 {{ message }}
+             {% endfor %}
+            </ul>
+        </div>        
+        {% endif %} 
+      <br>  
     <h2> {{ course_detail.name }} </h2>
     {{ course_detail.description|truncatechars:32 }}
     <br>
