--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,18 @@
 
 
 {% block content %}
+     <br>
+        {% if messages %}
+        <div class="alert alert-success alert-dismissible" role="alert">
+            <ul class="messages">
+            {% for message in messages %}
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                 {{ message }}
+             {% endfor %}
+            </ul>
+        </div>        
+        {% endif %} 
+      <br>  
     <h2>God's Bursa<br><small>just the best courses in entire Universe</small></h2>
       <div style="container">
         Welcome to God's Bursa, lucky man! In our cource we will teach you code like a God (or try to do it). Good luck !<br>
@@ -15,12 +27,18 @@
         So please make your choise:<br>
       </div>  
         <br>
+      <a href="{% url 'courses:add' %}">
+      <button type="button" class="btn btn-default">
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add course </button>    
+      </a>  
+      <br><br>  
       <div class="table-responsive">
         <table class="table table-hover table-bordered">
             <thead>
               <tr class="success">
                 <td><strong>Course</strong></td>
                 <td><strong>Short description</strong></td>
+                <td><strong>Actions</strong></td>    
               </tr>
             </thead>
             <tbody>
@@ -29,6 +47,16 @@
               <tr>
                 <td><a href="{% url 'courses:detail' course.id %}"> {{ course.name|upper }} </a></td>
                 <td>{{ course.short_description|title }}</td>
+                <td>
+                <a href="{% url 'courses:edit' course.id %}">
+                    <button type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit </button>    
+                </a>  
+                <a href="{% url 'courses:remove' course.id %}">
+                    <button type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Delete </button>    
+                </a>  
+                </td> 
               </tr>
               {% endfor %}
               {% endif %}  
