--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,68 +1,20 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Академия Щ.И.Т - Инфо о курсе</title>
 
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link rel="icon" href="{% static 'images/favicon.jpg'%}" type="image/jpg">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <img id="brico" alt="Brand" src="{% static 'images/bricon.png' %}"/>     
-        </div>
+{% block title %}Информация о курсе - {{ course.name }}{% endblock title %}
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Main</a><span class="sr-only">(current)</span></li>
-            <li><a href="{% url 'contact'%}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view'%}?course_id={{course.id}}">Students</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>    
+{% block content %}
      <div class= "container">    
       <div class="jumbotron">
       <h2>{{ course.name }}</h2><hr>
-      <p>{{ course.description }}</p>
+      <p>{{ course.description|truncatechars:32 }}</p>
      </div>
-
      <h3>Преподаватели</h3>
-      <div class="panel panel-default">
-        <div class="panel-heading">Учитель</div>
-        <div class="panel-body">
-        <a href="{% url 'coaches:detail' course.coach.id %}">{{ course.coach.name }} {{ course.coach.surname }}</a><br /><br />
-        {{ course.coach.description }}
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading">Ассистент</div>
-        <div class="panel-body">
-         <a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant.name }} {{ course.assistant.surname }}</a><br /><br />
-        {{ course.assistant.description }}
-        </div>
-      </div>
-
-
-     <h3>План курса:</h3>
-    <table class = "course_info">
+    {% include "include/coach_include.html" with block_title="Учитель" instructor=course.coach %}
+    {% include "include/coach_include.html" with block_title="Ассистент" instructor=course.assistant %}
+    <h3>План курса:</h3>
+      <table class = "course_info">
         <tr class = "oddtr">
         <td>#</td>
         <td class = "first_td">Курс</td>
@@ -77,11 +29,7 @@
         </tr>
       {% endif %}
       {% endfor %}
-    </table>  
+    </table> 
     <br />
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/static/js/bootstrap.min.js"></script>
-  </body>
-</html>
+    </div>
+{% endblock content%}
