--- a/templates/index.html
+++ b/templates/index.html
@@ -1,66 +1,33 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Академия Щ.И.Т - Главная</title>
 
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link rel="icon" href="{% static 'images/favicon.jpg' %}" type="image/jpg">
+{% block title %}Главная{% endblock title %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <img id="brico" alt="Brand" src="{% static 'images/bricon.png' %}"/>     
-        </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Main</a><span class="sr-only">(current)</span></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>    
-     <div class= "container">    
-      <div class="jumbotron">
-      <h2>Добро пожаловать в Академию Щ.И.Т.</h2><hr>
+{% block nav_class_main %}active{% endblock nav_class_main %}
+
+
+
+
+{% block content %}
+<div class= "container">    
+  <div class="jumbotron">
+    <h2>Добро пожаловать в Академию Щ.И.Т.</h2><hr>
       <p>Вступай в ряды всемирной организации по борьбе с преступностью!</p>
       <p>Хочешь стать мстителем? Узнать тайну личности Человека-Паука? Примерить костюм железного человека? Вступай к нам!</p>
-      </div>    
-      <h3>Выбери курс:</h3>
+  </div>    
+  <h3>Выбери курс:</h3>
     <table class = "course_info">
-        <tr class = "oddtr">
+      <tr class = "oddtr">
         <td class = "first_td">Курс</td>
         <td class = "second_td">Описание</td>
       </tr>
       {% for each_course in course %}
-        <tr>
-          <td><a href="{% url 'courses:detail' each_course.id %}"> {{ each_course.name }}</a></td>
-          <td>{{ each_course.short_description }}</td>
-        </tr>
+      <tr>
+        <td><a href="{% url 'courses:detail' each_course.id %}">{{ each_course.name|upper }}</a></td>
+        <td>{{ each_course.short_description|title }}</td>
+      </tr>
       {% endfor %}
     </table>  
-    </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/static/js/bootstrap.min.js"></script>
-  </body>
-</html>
+  </div>
+{% endblock content %}
