--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,4 +1,3 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Академия Щ.И.Т - Список Студентов</title>
-
+    <title>Академия Щ.И.Т - {% block title %}{% endblock title %}</title>
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
@@ -21,24 +19,24 @@
     <![endif]-->
   </head>
   <body>
+    {% block menu %}
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <img id="brico" alt="Brand" src="../static/images/bricon.png"/>    
+          <img id="brico" alt="Brand" src="{% static 'images/bricon.png' %}"/>     
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li  class="active"><a href="{% url 'student_list' %}">Students</a><span class="sr-only">(current)</span></li>
+            <li class="{% block nav_class_main %}{% endblock nav_class_main %}"active><a href="{% url 'index' %}">Main</a><span class="sr-only">(current)</span></li>
+            <li class="{% block nav_class_contact %}{% endblock nav_class_contact %}"><a href="{% url 'contact' %}">Contacts</a></li>
+            <li class="{% block nav_class_students %}{% endblock nav_class_students %}"><a href="{% url 'students:list_view' %}">Students</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
-    </nav>
-    <div class= "container">
+    </nav>        <div class= "container">
       <div class ="jumbotron">
         <div class = "container"><h1>PyBursa students</h1></div>
         <h3>There are five students</h3>
