--- a/templates/students/list_view.html
+++ b/templates/students/list_view.html
@@ -1,73 +1,37 @@
+{% extends "students/base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Академия Щ.И.Т - Студенты</title>
 
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link rel="icon" href="{% static 'images/favicon.jpg'%}" type="image/jpg">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <img id="brico" alt="Brand" src="{% static 'images/bricon.png' %}"/>     
-        </div>
+{% block title %}Студенты{% endblock title %}
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Main</a><span class="sr-only">(current)</span></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
 
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>    
-     <div class= "container">    
-      <div class="jumbotron">
-      <h2>Список студентов</h2><hr>
-     <h3></h3>
+{% block nav_class_students %}active{% endblock nav_class_students %}
+
+
+{% block content %}
+<div class= "container">    
+  <div class="jumbotron">
+    <h2>Список студентов</h2><hr>
     <table class = "course_info">
         <tr class = "oddtr">
-        <td>#</td>
-        <td class = "first_td">Фамилия Имя</td>
-        <td class = "second_td">Адрес</td>
-        <td class = "second_td">Skype</td>
-        <td class = "first_td">курсы</td>
-
-      </tr>
-      {% for student in student %}
+          <td>#</td>
+          <td class = "first_td">Фамилия Имя</td>
+          <td class = "second_td">Адрес</td>
+          <td class = "second_td">Skype</td>
+          <td class = "first_td">курсы</td>
+        </tr>
+        {% for student in student %}
         <tr>
-          <td>{{ student.id }}</td>
+          <td>{{ forloop.counter }}</td>
           <td><a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{student.name }}</td>
           <td>{{ student.address }}</td>
           <td>{{ student.skype }}</td>
           <td>{% for course in student.courses.all %}
-          <a href="{% url 'courses:detail' course.id %}"> {{ course.name }}</a><br />
-          {% endfor %}</td>
+          <a href="{% url 'courses:detail' course.id %}"> {{ course.name }}</a>
+        {% endfor %}</td>
         </tr>
       {% endfor %}
     </table>  
-    </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/static/js/bootstrap.min.js"></script>
-  </body>
-</html>
+  </div>
+</div>
+{% endblock content %}
