--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -36,7 +36,10 @@
               <td>
 
 
-              {% include 'include/cource_detail_include.html' cource=i %}
+              {% for course in student.courses.all %}
+<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
+{% endfor %}
+
 
 
 
