--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,30 +10,15 @@
 
         <div class="row">
               <div class="col-lg-4">
-                <img class="img-circle" src="{% static 'images/director.jpg' %}" alt="Generic placeholder image" width="160" height="140">
-                <h2>Director</h2>
-                <p>Name: Mike Corleone</p>
-                <p>skype: donMike</p>
-                <p>email: Mike.Corleone@good.fa</p>
-                <p>Phone: 1234567890</p>
-                <p><a class="btn btn-default" href="{% static 'images/oops.jpg' %}" role="button">View details &raquo;</a></p>
+             {% include "include/contact_include.html" with block_image="images/director.jpg" block_title="Director:" block_name="Mike Corleone" block_skype="donMike" block_email="Mike.Corleone@good.fa" block_phone="1234567890" %}
+              <p><a class="btn btn-default" href="{% static 'images/oops.jpg' %}" role="button">View details &raquo;</a></p>
               </div><!-- /.col-lg-4 -->
               <div class="col-lg-4">
-                <img class="img-circle" src="{% static 'images/manager.jpg' %}" alt="Generic placeholder image" width="160" height="140">
-                <h2>Manager</h2>
-                <p>Name: Tony Montana</p>
-                <p>skype: TonyMontana</p>
-                <p>email: Tony.Montana@scar.fe</p>
-                <p>Phone: 764576</p>
+             {% include "include/contact_include.html" with block_image="images/manager.jpg" block_title="Manager:" block_name="Tony Montana" block_skype="TonyMontana" block_email="Tony.Montana@scar.fe" block_phone="764576" %}
                 <p><a class="btn btn-default" href="{% static ' images/oops.jpg' %}" role="button">View details &raquo;</a></p>
               </div><!-- /.col-lg-4 -->
               <div class="col-lg-4">
-                <img class="img-circle" src="{% static 'images/director.png' %}" alt="Generic placeholder image" width="160" height="140">
-                <h2>Founder</h2>
-                <p>Name: Vittorio Carleone</p>
-                <p>skype: DonVito</p>
-                <p>email: Vittorio72@good.fa</p>
-                <p>Phone: go skype</p>
+             {% include "include/contact_include.html" with block_image="images/director.png" block_title="Founder:" block_name="Vittorio Carleone" block_skype="DonVito" block_email="Vittorio72@good.fa" block_phone="go skype" %}
                 <p><a class="btn btn-default" href="{% static 'images/oops.jpg' %}" role="button">View details &raquo;</a></p>
               </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
